examples/kubernetes/demo/service.yaml
kind: Service
apiVersion: v1

metadata:
  name: hello-svc

spec:
  selector:
    env: prod
  type: LoadBalancer
  ports:
  - port: 8000
    targetPort: http
