examples/kubernetes/demo/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress

metadata:
  name: my-ingress

spec:
  rules:
  - host: kishore.arcesium.com
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-svc
          servicePort: 8000
